backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-fix-back
  namespace: quick-fix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quick-fix-back
  template:
    metadata:
      labels:
        app: quick-fix-back
    spec:
      containers:
        - name: quick-fix-back
          image: gcr.io/quick-fix-431422/quick-fix-back
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quick-fix-back
  namespace: quick-fix
spec:
  selector:
    app: quick-fix-back
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
